After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 616538 - totem_pl_parser_save returns FALSE with no error info when playlist is empty
totem_pl_parser_save returns FALSE with no error info when playlist is empty
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
unspecified
Other Linux
: High critical
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
Depends on:
Blocks:
 
 
Reported: 2010-04-22 16:34 UTC by Angel Abad
Modified: 2010-05-05 11:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Stacktrace (3.35 KB, text/plain)
2010-04-22 20:52 UTC, Angel Abad
Details

Description Angel Abad 2010-04-22 16:34:47 UTC
In Ubuntu Lucid  Peter Schaefer reported:

Steps to reproduce:

1) Insert a SD-memory card containing the magic file ".is_audio_player" into the pc's card reader.

2) Wait till the removable device comes up in rhythmbox.

3) Create a playlist on the device.

4) Drag-and-drop an entry from a playlist residing already on the computer onto the newly created playlist.

5) Crash

ProblemType: Crash
DistroRelease: Ubuntu 10.04
Package: rhythmbox 0.12.8-0ubuntu3
ProcVersionSignature: Ubuntu 2.6.32-21.32-generic 2.6.32.11+drm33.2
Uname: Linux 2.6.32-21-generic x86_64
NonfreeKernelModules: nvidia
Architecture: amd64
Date: Tue Apr 20 20:08:12 2010
ExecutablePath: /usr/bin/rhythmbox
ProcCmdline: rhythmbox
ProcEnviron:
 PATH=(custom, user)
 LANG=de_DE.UTF-8
 SHELL=/bin/bash
SegvAnalysis:
 Segfault happened at: 0x7fc963f9dd68 <save_playlist+504>: mov 0x8(%rax),%rcx
 PC (0x7fc963f9dd68) ok
 source "0x8(%rax)" (0x00000008) not located in a known VMA region (needed readable region)!
 destination "%rcx" ok
SegvReason: reading NULL VMA
Signal: 11
SourcePackage: rhythmbox
StacktraceTop:
 save_playlist (source=<value optimized out>) at rb-generic-player-playlist-source.c:276
 ?? () from /lib/libglib-2.0.so.0
 g_main_context_dispatch () from /lib/libglib-2.0.so.0
 ?? () from /lib/libglib-2.0.so.0
 g_main_loop_run () from /lib/libglib-2.0.so.0
Title: rhythmbox crashed with SIGSEGV in save_playlist()
UserGroups: adm admin audio cdrom dialout dip fax floppy fuse libvirtd lpadmin plugdev sambashare tape vboxusers video

Launchpad ref: https://bugs.edge.launchpad.net/ubuntu/+source/rhythmbox/+bug/567399

Thanks!
Comment 1 Jonathan Matthew 2010-04-22 20:48:22 UTC
Thanks for taking the time to report this bug.
Unfortunately, that stack trace is missing some elements that will help a lot to solve the problem, so it will be hard for the developers to fix that crash. Can you get us a stack trace with debugging symbols? Please see http://live.gnome.org/GettingTraces for more information on how to do so and reopen this bug or report a new one. Thanks in advance!
Comment 2 Angel Abad 2010-04-22 20:52:21 UTC
Created attachment 159363 [details]
Stacktrace
Comment 3 Jonathan Matthew 2010-04-22 21:32:52 UTC
Looks like totem_pl_parser_save returned FALSE but didn't set an error, which is not especially good.

I've fixed the crash in commit e7b3f41, so I'm moving the bug to totem-pl-parser to hopefully address that.
Comment 4 Bastien Nocera 2010-05-05 11:08:19 UTC
The only time this can happen is if the playlist is empty. Or if there's codepaths in GIO that don't return errors on failure, which is probably unlikely.

Fixed in 09b2bae.