Fix returning FALSE with no error set in _save()

When the playlist is empty, set an error mentioned why it failed,
instead of failing silently and not setting the error.

https://bugzilla.gnome.org/show_bug.cgi?id=616538